--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -82,7 +82,7 @@
   }
 }
 
-@media all and (max-width: 480px) {
+@media all and (max-width: 570px) {
   .navbar {
     align-items: flex-start;
     justify-content: center;
