--- a/src/components/Techstack/Techstack.css
+++ b/src/components/Techstack/Techstack.css
@@ -14,11 +14,11 @@
 }
 
 .images-cont img {
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   margin: 0 1.8rem;
   cursor: pointer;
-  filter: drop-shadow(0 0 1rem rgba(36, 90, 240, 0.671));
+  filter: drop-shadow(0 0 1rem rgba(127, 150, 212, 0.671));
 }
 
 @media all and (max-width: 768px) {
